--- a/layouts/events/upcoming.html
+++ b/layouts/events/upcoming.html
@@ -1,9 +1,8 @@
 <article class="col-lg-4 col-md-6 col-12 clearfix wow fadeInUp mb-4" data-wow-duration="500ms">
     <div class="post-block">
       <div class="media-wrapper">
-        <img class="img-fluid lozad" data-src="{{ .Params.image_webp | absURL }}" onerror="this.onerror=null;this.src='{{ .Params.image | absURL }}'">
+        <img class="img-fluid lozad" data-src="{{ .Params.Image_webp | absURL }}" onerror="this.onerror=null;this.src='{{ .Params.Image | absURL }}'">
       </div>
-  
       <div class="content">
         <h3><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
         <p>{{ .Summary }}</p>
