--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -18,9 +18,11 @@
         </h4>
         {{ range .Params.event_speakers }}
           <div class="mb-2">
+            {{with .speaker_image}}
             <div class="client-thumb speaker">
               <img class="img-fluid lozad" data-src="/images/client/client-1.webp" onerror="this.onerror=null;this.src='\/images\/client\/client-1.jpg'" alt="Lemos Kail" src="/images/client/client-1.webp" data-loaded="true">
             </div>
+            {{end}}
             <div class="bio">{{.speaker_name}}, {{.bio}}</div>
           </div>
         {{end}}
