--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -18,7 +18,7 @@
         </h4>
         {{ range .Params.event_speakers }}
           <div class="mb-2">
-            {{if isset "speaker_image"}}
+            {{with .speaker_image"}}
             <div class="client-thumb speaker">
               <img class="img-fluid lozad" data-src="/images/client/client-1.webp" onerror="this.onerror=null;this.src='\/images\/client\/client-1.jpg'" alt="Lemos Kail" src="/images/client/client-1.webp" data-loaded="true">
             </div>
