--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -10,7 +10,9 @@
         <ul class="list-inline mb-50">
           <li class="list-inline-item">{{ dateFormat "Monday, Jan 2, 2006" .Params.event_start_date }}</li>
         </ul>
+        {{with .Params.image}}
         <img class="img-fluid mb-50 lozad" data-src="{{ .Params.image | absURL }}" alt="blog-image">
+        {{end}}
       </div>
       <div class="col-lg-8 offset-lg-2 mb-3">
         <h4>
