added html for speaker image

--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -19,9 +19,9 @@
         {{ range .Params.event_speakers }}
           <div class="mb-2">
             {{with .speaker_image}}
-            <div class="client-thumb speaker">
-              <img class="img-fluid lozad" data-src="/images/client/client-1.webp" onerror="this.onerror=null;this.src='\/images\/client\/client-1.jpg'" alt="Lemos Kail" src="/images/client/client-1.webp" data-loaded="true">
-            </div>
+              <div class="client-thumb speaker">
+                <img class="img-fluid lozad" data-src="{{ .speaker_image_webp | absURL }}" onerror="this.onerror=null;this.src='{{ .speaker_image | absURL }}'" alt="{{ .speaker_name }}">
+              </div>
             {{end}}
             <div class="bio">{{.speaker_name}}, {{.bio}}</div>
           </div>
