--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -12,21 +12,24 @@
         </ul>
           <img class="img-fluid mb-50 lozad" data-src="{{ .Params.image | absURL }}" alt="blog-image">
       </div>
-      <div class="col-lg-8 offset-lg-2 mb-3">
-        <h4>
-          Speakers
-        </h4>
-        {{ range .Params.event_speakers }}
-          <div class="mb-2">
-            {{with .speaker_image}}
-              <div class="client-thumb speaker">
-                <img class="img-fluid lozad" data-src="{{ .speaker_image_webp | absURL }}" onerror="this.onerror=null;this.src='{{ .speaker_image | absURL }}'" alt="{{ .speaker_name }}">
-              </div>
-            {{end}}
-            <div class="bio">{{.speaker_name}}, {{.bio}}</div>
-          </div>
-        {{end}}
-      </div>
+      {{ $speakers := .Params.event_speakers }}
+      {{ if gt ( len $speakers) 0 }}
+        <div class="col-lg-8 offset-lg-2 mb-3">
+          <h4>
+            Speakers
+          </h4>
+          {{ range $speakers }}
+            <div class="mb-2">
+              {{with .speaker_image}}
+                <div class="client-thumb speaker">
+                  <img class="img-fluid lozad" data-src="{{ .speaker_image_webp | absURL }}" onerror="this.onerror=null;this.src='{{ .speaker_image | absURL }}'" alt="{{ .speaker_name }}">
+                </div>
+              {{end}}
+              <div class="bio">{{.speaker_name}}, {{.bio}}</div>
+            </div>
+          {{end}}
+        </div>
+      {{end}}
       <div class="col-lg-8 offset-lg-2">
         <div class="post-single-content">
           {{ .Content }}
