--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -10,7 +10,9 @@
         <ul class="list-inline mb-50">
           <li class="list-inline-item">{{ dateFormat "Monday, Jan 2, 2006" .Params.event_start_date }}</li>
         </ul>
-          <img class="img-fluid mb-50 lozad" data-src="{{ .Params.image | absURL }}" alt="event-image">
+          {{with .Params.image}}
+          <img class="img-fluid mb-50 lozad" data-src="{{ . | absURL }}" alt="event-image">
+          {{end}}
       </div>
       {{ $speakers := .Params.event_speakers }}
       {{ if gt ( len $speakers) 0 }}
@@ -28,7 +30,7 @@
                   <img class="img-fluid lozad" data-src="{{ $imagewbp | absURL }}" onerror="this.onerror=null;this.src='{{ $image | absURL }}'" alt="{{ $name }}">
                 </div>
               {{end}}
-              <div class="bio"><span>{{.speaker_name}}</span>, {{.bio}}</div>
+              <div class="bio"><span>{{.speaker_name}}</span> {{.bio}}</div>
             </div>
           {{end}}
         </div>
