--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,6 +9,7 @@
         <h1>{{ .Title }}</h1>
         <ul class="list-inline mb-50">
           <!-- <li class="list-inline-item"><a href="{{ `author/` | relLangURL }}{{ .Params.Author | urlize }}/">{{ .Params.Author }}</a></li> -->
+          <li class="list-inline-item">{{ .Params.Author }}</li>
           <li class="list-inline-item">{{ dateFormat "Monday, Jan 2, 2006" .Date }}</li>
         </ul>
         <img class="img-fluid mb-50 lozad" data-src="{{ .Params.Image | absURL }}" alt="blog-image">
@@ -17,7 +18,8 @@
         <div class="post-single-content">
           {{ .Content }}
         </div>
-        <div class="mt-2">
+        <div class=mt-2">
+          {{ .Params.Author_bio }}
         </div>
         {{ if site.Params.post_share }}
         {{ partial "post-share.html" . }}
