--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -18,7 +18,7 @@
         <div class="post-single-content">
           {{ .Content }}
         </div>
-        <div class=mt-2">
+        <div class="mt-2">
           {{ .Params.Author_bio }}
         </div>
         {{ if site.Params.post_share }}
