--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -11,7 +11,7 @@
 
 	<meta property="og:title" content="{{ .Title }}">
 	<meta property="og:description" content="{{ with .Description }}{{ . }}{{ else }}{{ with site.Params.description }}{{ . }}{{ end }}{{ end }}">
-	<meta property="og:image" content="{{ .image }}" />
+	<meta property="og:image" content="{{ .Image }}" />
 	<meta property="og:url" content="{{ .Permalink }}">
 
 	{{ "<!-- plugins -->" | safeHTML }}
