--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,13 +5,13 @@
 	{{ "<!-- mobile responsive meta -->" | safeHTML }}
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ with site.Params.description }}{{ . }}{{ end }}{{ end }}">
-	{{ with site.Params.author }}
+	<!-- {{ with site.Params.author }} -->
 	<meta name="author" content="{{ . }}">{{ end }}
-	{{ hugo.Generator }}
+	<!-- {{ hugo.Generator }} -->
 
 	<meta property="og:title" content="{{ .Title }}">
 	<meta property="og:description" content="{{ with .Description }}{{ . }}{{ else }}{{ with site.Params.description }}{{ . }}{{ end }}{{ end }}">
-	<meta property="og:image" content="{{ .Image }}" />
+	<meta property="og:image" content="{{ with .Image }}{{ . }}{{ else }}{{ 'images/Cover.jpg' }}{{ end }}" />
 	<meta property="og:url" content="{{ .Permalink }}">
 
 	{{ "<!-- plugins -->" | safeHTML }}
