--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,17 +3,17 @@
 	<title>{{ .Title }}</title>
 
 	{{ "<!-- mobile responsive meta -->" | safeHTML }}
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ with site.Params.description }}{{ . }}{{ end }}{{ end }}">
 	{{ with site.Params.author }}
 	<meta name="author" content="{{ . }}">{{ end }}
 	{{ hugo.Generator }}
 
-	<meta property="og:title" content="{{ .Title }}">
-	<meta property="og:description" content="{{ with .Description }}{{ . }}{{ else }}{{ with site.Params.description }}{{ . }}{{ end }}{{ end }}">
-	<meta property="og:image" content="{{ `images/Cover.jpg` | absURL }}" />
-	<meta property="og:url" content="{{ .Permalink }}">
+	{{ template "_internal/opengraph.html" . }}
+	{{ template "_internal/twitter_cards.html" . }}
 
+	<link rel="canonical" href="{{ .Permalink }}">
 	{{ "<!-- plugins -->" | safeHTML }}
 	{{ range site.Params.plugins.css }}
 	<link rel="stylesheet" href="{{ .link | absURL }}">
