--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -12,7 +12,9 @@
 
 	{{ template "_internal/opengraph.html" . }}
 	{{ template "_internal/twitter_cards.html" . }}
-	<meta name="twitter:image" content="{{ with .Params.image }}{{ . }}{{ else }}{{ `images/Cover.jpg` | absURL }}{{end}}"> 
+
+	{{ $url := .baseURL }}
+	<meta name="twitter:image" content="{{ with .Params.image }}{{$url}}{{ . }}{{ else }}{{$url}}{{ `images/Cover.jpg` | absURL }}{{end}}"> 
 
 	<link rel="canonical" href="{{ .Permalink }}">
 	{{ "<!-- plugins -->" | safeHTML }}
