--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -13,7 +13,7 @@
 	{{ template "_internal/opengraph.html" . }}
 	{{ template "_internal/twitter_cards.html" . }}
 
-	{{ $url := .baseURL }}
+	{{ $url := .BaseURL }}
 	<meta name="twitter:image" content="{{ with .Params.image }}{{$url}}{{ . }}{{ else }}{{$url}}{{ `images/Cover.jpg` | absURL }}{{end}}"> 
 
 	<link rel="canonical" href="{{ .Permalink }}">
