--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -12,9 +12,9 @@
 
 	{{ $url := .Site.BaseURL }}
 	{{ template "_internal/opengraph.html" . }}
-	<meta name="og:image" content="{{ with .Params.image }}{{$url}}{{ . }}{{ else }}{{$url}}{{ `images/Cover.jpg` }}{{end}}">
+	<meta name="og:image" content="{{ with .Params.image }}{{ . | absURL }}{{ else }}{{ `images/Cover.jpg` | absURL}}{{end}}">
 	{{ template "_internal/twitter_cards.html" . }}
-	<meta name="twitter:image" content="{{ with .Params.image }}{{$url}}{{ . }}{{ else }}{{$url}}{{ `images/Cover.jpg`}}{{end}}">
+	<meta name="twitter:image" content="{{ with .Params.image }}{{ . | absURL}}{{ else }}{{ `images/Cover.jpg` | absURL}}{{end}}">
 	
 
 	<link rel="canonical" href="{{ .Permalink }}">
