--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,7 +6,9 @@
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ with site.Params.description }}{{ . }}{{ end }}{{ end }}">
+	{{ with site.Params.author }}
 	<meta name="author" content="{{ . }}">{{ end }}
+	{{ hugo.Generator }}
 
 	{{ $url := .Site.StaticAddress }}
 	{{ template "_internal/opengraph.html" . }}
