--- a/layouts/partials/testimonial.html
+++ b/layouts/partials/testimonial.html
@@ -25,7 +25,7 @@
 						<div class="client-info">
 							<div class="client-meta">
 								<h3>{{ .name }}</h3>
-								<span>{{ .designation }}</span>e
+								<span>{{ .designation }}</span>
 							</div>
 							<div class="client-comment">
 								<p>{{ .content | markdownify }}</p>
