--- a/layouts/partials/post-share.html
+++ b/layouts/partials/post-share.html
@@ -1,9 +1,9 @@
-{{ $url := site.Params.staticAddress .Permalink | absLangURL }}
+{{ $url := site.Params.staticAddress }}
 <!-- Sharingbutton Facebook -->
 <div class="social-share pt-4">
 	<h4>{{ i18n "share" }}:</h4>
 	<!-- Sharingbutton Facebook -->
-	<a class="resp-sharing-button__link" href="https://facebook.com/sharer/sharer.php?u={{ $url }}" target="_blank"
+	<a class="resp-sharing-button__link" href="https://facebook.com/sharer/sharer.php?u={{ $url }}{{.Permalink | absLangURL }}" target="_blank"
 		rel="noopener" aria-label="">
 		<div class="resp-sharing-button resp-sharing-button--facebook resp-sharing-button--small">
 			<div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
@@ -15,7 +15,7 @@
 	</a>
 
 	<!-- Sharingbutton Twitter -->
-	<a class="resp-sharing-button__link" href="https://twitter.com/intent/tweet/?text={{ .Title }}&amp;url={{ $url }}"
+	<a class="resp-sharing-button__link" href="https://twitter.com/intent/tweet/?text={{ .Title }}&amp;url={{ $url }}{{.Permalink | absLangURL }}"
 		target="_blank" rel="noopener" aria-label="">
 		<div class="resp-sharing-button resp-sharing-button--twitter resp-sharing-button--small">
 			<div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
@@ -28,7 +28,7 @@
 	</a>
 
 	<!-- Sharingbutton Google+ -->
-	<a class="resp-sharing-button__link" href="https://plus.google.com/share?url={{ $url }}" target="_blank"
+	<!-- <a class="resp-sharing-button__link" href="https://plus.google.com/share?url={{ $url }}" target="_blank"
 		rel="noopener" aria-label="">
 		<div class="resp-sharing-button resp-sharing-button--google resp-sharing-button--small">
 			<div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
@@ -38,10 +38,10 @@
 				</svg>
 			</div>
 		</div>
-	</a>
+	</a> -->
 
 	<!-- Sharingbutton E-Mail -->
-	<a class="resp-sharing-button__link" href="mailto:?subject={{ .Title }}&amp;body={{ $url }}" target="_self"
+	<!-- <a class="resp-sharing-button__link" href="mailto:?subject={{ .Title }}&amp;body={{ $url }}" target="_self"
 		rel="noopener" aria-label="">
 		<div class="resp-sharing-button resp-sharing-button--email resp-sharing-button--small">
 			<div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
@@ -51,10 +51,10 @@
 				</svg>
 			</div>
 		</div>
-	</a>
+	</a> -->
 
 	<!-- Sharingbutton Reddit -->
-	<a class="resp-sharing-button__link"
+	<!-- <a class="resp-sharing-button__link"
 		href="https://reddit.com/submit/?url={{ $url }}&amp;resubmit=true&amp;title={{ .Title }}" target="_blank"
 		rel="noopener" aria-label="">
 		<div class="resp-sharing-button resp-sharing-button--reddit resp-sharing-button--small">
@@ -65,10 +65,10 @@
 				</svg>
 			</div>
 		</div>
-	</a>
+	</a> -->
 
 	<!-- Sharingbutton WhatsApp -->
-	<a class="resp-sharing-button__link" href="whatsapp://send?text={{ .Title }}%20{{ $url }}" target="_blank"
+	<a class="resp-sharing-button__link" href="whatsapp://send?text={{ .Title }}%20{{ $url }}{{.Permalink | absLangURL }}" target="_blank"
 		rel="noopener" aria-label="">
 		<div class="resp-sharing-button resp-sharing-button--whatsapp resp-sharing-button--small">
 			<div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
@@ -81,7 +81,7 @@
 	</a>
 
 	<!-- Sharingbutton Telegram -->
-	<a class="resp-sharing-button__link" href="https://telegram.me/share/url?text={{ .Title }}&amp;url={{ $url }}"
+	<!-- <a class="resp-sharing-button__link" href="https://telegram.me/share/url?text={{ .Title }}&amp;url={{ $url }}"
 		target="_blank" rel="noopener" aria-label="">
 		<div class="resp-sharing-button resp-sharing-button--telegram resp-sharing-button--small">
 			<div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
@@ -91,6 +91,6 @@
 				</svg>
 			</div>
 		</div>
-	</a>
+	</a> -->
 
 </div>
