--- a/layouts/partials/post-share.html
+++ b/layouts/partials/post-share.html
@@ -68,7 +68,7 @@
 	</a> -->
 
 	<!-- Sharingbutton WhatsApp -->
-	<a class="resp-sharing-button__link" href="whatsapp://send?text={{ .Title }}%20{{ $url }}{{.Permalink | absLangURL }}" target="_blank"
+	<!-- <a class="resp-sharing-button__link" href="whatsapp://send?text={{ .Title }}%20{{ $url }}{{.Permalink | absLangURL }}" target="_blank"
 		rel="noopener" aria-label="">
 		<div class="resp-sharing-button resp-sharing-button--whatsapp resp-sharing-button--small">
 			<div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
@@ -78,7 +78,7 @@
 				</svg>
 			</div>
 		</div>
-	</a>
+	</a> -->
 
 	<!-- Sharingbutton Telegram -->
 	<!-- <a class="resp-sharing-button__link" href="https://telegram.me/share/url?text={{ .Title }}&amp;url={{ $url }}"
