--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -12,8 +12,6 @@
         <div class="title text-center wow fadeInDown" data-wow-duration="500ms">
 					<h2>{{ with .title }} {{ index (split . " ") 0 | safeHTML }} {{ end }}<span class="color">
             {{ with .title }} {{ after (len (index (split . " ") 0)) . | safeHTML }} {{ end }}</span></h2>
-            <h4> {{ with .soustitle }} {{ index (split . " ") 0 | safeHTML }} {{ end }}<span class="color">
-              {{ with .soustitle }} {{ after (len (index (split . " ") 0)) . | safeHTML }} {{ end }}</span></h4>
           <div class="border-meghna"></div>
         </div>
       </div>
@@ -27,8 +25,7 @@
           {{"<!-- plan name & value -->" | safeHTML}}
           <div class="price-title">
             <h3>{{ .name }}</h3>
-            <h6>{{ .description }}</h6>
-            <p><strong class="value">{{ .price }}</strong> {{ .unit }}</p>
+            <p><strong class="value">{{ .price }}</strong>/ {{ .unit }}</p>
           </div>
 
           {{"<!-- plan description -->" | safeHTML}}
