update navigation using regEx

--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -17,7 +17,8 @@
 				<ul class="navbar-nav ml-auto">
 					{{ range site.Menus.main }}
 					<li class="nav-item">
-            <a class="nav-link" href="{{if .Pre}}{{if not $.IsHome}}{{site.BaseURL | relLangURL}}{{end}}{{.Pre}}{{ .URL }}{{else}}{{.URL | relLangURL}}{{end}}">{{ .Name }}</a>
+            <a class="nav-link" {{if findRE `^http` .URL}}target="_blank"{{end}}
+						href="{{if findRE `^#` .URL}}{{if not $.IsHome}}{{site.BaseURL | relLangURL}}{{end}}{{ .URL }}{{else}}{{.URL | relLangURL}}{{end}}">{{ .Name }}</a>
 					</li>
 					{{ end }}
 				</ul>
